feat: add the object_store_path field to File
